# E-commerce-Support-Automation

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  classifier.py  policy.py  urgency.py
backend/app/ai/guardrails/: __init__.py  service.py
backend/app/ai/prompts/: customer_reply_prompt.md  daily_report_prompt.md  guardrail_check_prompt.md  manager_note_prompt.md  ticket_summary_prompt.md
backend/app/ai/providers/: __init__.py  base.py  factory.py  local.py  openai_provider.py
backend/app/ai/retrieval/: __init__.py  service.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py  n8n.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: analytics_service.py  customer_service.py  knowledge_service.py  product_service.py  sla_service.py  support_service.py  ticket_service.py
backend/tests/: conftest.py  test_classifier.py  test_provider_optional.py  test_retrieval_guardrails_sla.py  test_support_flows.py
bot/: Dockerfile  pyproject.toml
bot/app/: admin.py  client.py  config.py  main.py
bot/tests/: test_admin.py
dashboard/: Dockerfile  app.py  pyproject.toml
docs/: ai_engineering.md  api.md  architecture.md  commercial_use_case.md  demo_script.md  n8n_setup.md  roadmap.md  security.md  supabase_setup.md  telegram_setup.md
n8n/: README.md
scripts/: demo_conversation.py  seed_db.py  (+4 more)
(+22 files in other folders)
