[project]
name = "ecommerce-support-bot"
version = "0.1.0"
description = "Telegram bot interface for TechGear Store support automation"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
